--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,31 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Run tests
+        run: npm test
+  
       - name: Audit dependencies 
         run: npm audit --audit-level=high || true
 
-      - name: Run tests
-        run: npm test
+    
+      - name: Run OWASP Dependency-Check
+        uses: jeremylong/DependencyCheck_Action@v6
+        with:
+          project: secure-rest-api-node
+          path: .
+          format: "HTML,JSON,XML"
+          out: odc-report
+          data: odc-data
+          fail_on_cvss: 7
+          
+      - name: Upload report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: odc-report
+
+      - name: Print summary path
+        run: |
+          echo "HTML report: odc-report/dependency-check-report.html"
+          echo "JSON report: odc-report/dependency-check-report.json"
+
