--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,28 +29,61 @@ jobs:
       - name: Audit dependencies 
         run: npm audit --audit-level=high || true
 
-    
-      - name: Run OWASP Dependency-Check
-        uses: dependency-check/Dependency-Check_Action@1.1.0
-        with:
-          project: secure-rest-api-node
-          path: .
-          format: HTML
-          args: >
-            -f JSON -f SARIF
-            --out odc-report
-            --data odc-data
-            --failOnCVSS ${{ env.FAIL_ON_CVSS }}
+  
+  depcheck:
+      runs-on: ubuntu-latest
+      permissions:
+        contents: read
+        security-events: write
+      env:
+        FAIL_ON_CVSS: "7" 
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
 
-          
-      - name: Upload report artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: dependency-check-report
-          path: odc-report
+        - name: Prepare folders 
+          run: mkdir -p odc-data odc-report
 
-      - name: Print summary path
-        run: |
-          echo "HTML report: odc-report/dependency-check-report.html"
-          echo "JSON report: odc-report/dependency-check-report.json"
+        - name: Cache ODC database
+          uses: actions/cache@v4
+          with:
+            path: odc-data
+            key: ${{ runner.os }}-odc-data
+            restore-keys: ${{ runner.os }}-odc-data
 
+        - name: Run OWASP Dependency-Check
+          uses: dependency-check/Dependency-Check_Action@1.1.0
+          with:
+            project: secure-rest-api-node
+            path: .
+            format: ALL
+            args: >
+              --out odc-report
+              --data odc-data
+              --prettyPrint
+              --failOnCVSS ${{ env.FAIL_ON_CVSS }}
+
+        - name: List generated reports
+          if: always()
+          run: |
+            echo "== search for dependency-check-report.* =="
+            find . -maxdepth 3 -type f -name "dependency-check-report.*" -print || true
+            echo "== odc-report =="
+            ls -la odc-report || true
+
+        - name: Upload report artifact
+          if: always()
+          uses: actions/upload-artifact@v4
+          with:
+            name: dependency-check-report
+            path: |
+              odc-report/**
+              reports/**
+              dependency-check-report.*
+            if-no-files-found: warn
+
+        - name: Upload SARIF to Security
+          if: always() && hashFiles('odc-report/dependency-check-report.sarif') != ''
+          uses: github/codeql-action/upload-sarif@v3
+          with:
+            sarif_file: odc-report/dependency-check-report.sarif
